# Supply-Link

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  STABLE_EVENT_ID_DESIGN.md  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
docs/: API_VERSIONING.md  ASYNC_JOBS.md  CONTRACT_ERRORS.md  ENDPOINT_EXPOSURE_MATRIX.md  EVENT_INTERCHANGE_FORMAT.md  FEE_BUMP_STRATEGY.md  IMAGE_OPTIMIZATION.md  NETWORK_CONFIG_PARITY.md  NONCE_LIFECYCLE.md  RELEASE_RUNBOOK.md  RESILIENCE.md  SECRET_ROTATION_RUNBOOK.md  SSR_VERIFY_PAGE.md  api-error-handling.md  event-schema-versioning.md  idempotency.md  openapi.yaml  runbooks.md  slo.md  storage-cost-budget.md  user-guide-producer.md
docs/indexing/: INDEXING_GUIDE.md  reference-parser.ts  sample-dataset.ts
docs/upgrade/: CONTRACT_UPGRADE_RUNBOOK.md
docs/webhooks/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  example-receiver.ts
frontend/: .env.example  .gitignore  .prettierignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/__tests__/: EventTimeline.test.tsx  RegisterProductForm.test.tsx  (+21 more)
scripts/: check-secrets.sh
smart-contract/: Cargo.toml
smart-contract/contracts/: Cargo.toml
smart-contract/contracts/src/: compliance_tests.rs  fuzz_tests.rs  integration_tests.rs  invariants.rs  lib.rs  profiling.rs  resilience_tests.rs  stable_id_tests.rs  tests.rs
(+245 files in other folders)
